add rhel7 yjava_jetty install cmd