@@ -67,6 +67,7 @@ else
   echo "INFO: KMS node is: $kmsnodeshort"
 fi
 
+
 # need the kgp from hadoopqa_headless_keys to find the KMS test key, hitusr_4
 # Note: the json-c hack is needed because zts-client, athens_utils and rdl_cpp have
 # conflicting deps on this pkg 
@@ -162,12 +163,31 @@ fi
 # yjava_jetty-9.3.15.v20161220_782 and yhdrs-1.28.5, lots of
 # dep breakage on 20171127
 #
-cmd_jetty="yinst i yjava_jetty-9.3.24.v20180605_801 yjava_ysecure yjava_vmwrapper-2.3.10 yhdrs-1.27.6 -br current  -same -live -downgrade   -set yjava_jetty.enable_https=true  -set yjava_jetty.https_port=4443  -set yjava_jetty.http_port=-1 \
+#
+# need to know OS version for jetty install later on
+#
+OS_VER=`$SSH $kmsnode "cat /etc/redhat-release | cut -d' ' -f7"`
+# OS_VER=`cat /etc/redhat-release | cut -d' ' -f7`
+if [[ "$OS_VER" =~ ^6. ]]; then
+    echo "INFO: OS is $OS_VER"
+
+    cmd_jetty="yinst i yjava_jetty-9.3.24.v20180605_801 yjava_ysecure yjava_vmwrapper-2.3.10 yhdrs-1.27.6 -br current  -same -live -downgrade   -set yjava_jetty.enable_https=true  -set yjava_jetty.https_port=4443  -set yjava_jetty.http_port=-1 \
   -set yjava_jetty.options=\"-Djavax.net.ssl.sessionCacheSize=1000 -Djavax.net.ssl.sessionCacheTimeout=60 -Djute.maxbuffer=10485760\" \
   -set yjava_jetty.key_store=\"/etc/ssl/certs/prod/_open_ygrid_yahoo_com-dev.jks\"  -set yjava_jetty.key_store_password_key_var=password  -set yjava_jetty.key_store_type=JKS \
   -set yjava_jetty.trust_store=\"/etc/ssl/certs/prod/_open_ygrid_yahoo_com-dev.jks\"  -set yjava_jetty.trust_store_password_key_var=password  \
   -set yjava_jetty.trust_store_type=JKS  -set yjava_jetty.user_name=hadoop8  -set yjava_jetty.autostart=off \
   -set yjava_jetty.garbage_collection=\"-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+PrintGCApplicationStoppedTime -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/home/y/var/run/kms/kms.hprof -Xloggc:/home/y/logs/yjava_jetty/gc.log -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=100M -Xmx8g\""
+
+elif [[ "$OS_VER" =~ ^7. ]]; then
+    echo "OS is $OS_VER"
+    # all of the yjava_jetty dep pkgs listed here need explicit versions becuase they are too old, built pre-rhel7 support in yinst so yinst
+    # reports not found even though they are really there
+    yinst i yjava_jetty-9.3.15.v20161220_782 yjava_jmx_singleton_server-1.0.0 yjava_resource_handler-1.0.21  yjava_ysecure_agent-1.0.10  yjava_resource_handler-1.0.21 ysysctl-2.2.3  jports_org_json__json-1.20090211_1  -br test  -same -live -downgrade   -set yjava_jetty.enable_https=true  -set yjava_jetty.https_port=4443  -set yjava_jetty.http_port=-1   -set yjava_jetty.options="-Djavax.net.ssl.sessionCacheSize=1000 -Djavax.net.ssl.sessionCacheTimeout=60 -Djute.maxbuffer=10485760"   -set yjava_jetty.key_store="/etc/ssl/certs/prod/_open_ygrid_yahoo_com-dev.jks"  -set yjava_jetty.key_store_password_key_var=password  -set yjava_jetty.key_store_type=JKS   -set yjava_jetty.trust_store="/etc/ssl/certs/prod/_open_ygrid_yahoo_com-dev.jks"  -set yjava_jetty.trust_store_password_key_var=password    -set yjava_jetty.trust_store_type=JKS  -set yjava_jetty.user_name=hadoop8  -set yjava_jetty.autostart=off   -set yjava_jetty.garbage_collection="-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+PrintGCApplicationStoppedTime -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/home/y/var/run/kms/kms.hprof -Xloggc:/home/y/logs/yjava_jetty/gc.log -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=100M -Xmx8g"
+
+else
+    echo "WARN: Unknown OS $OS_VER!"
+    exit 1
+fi
 
 $SSH $kmsnode $cmd_jetty
 if [ $? -ne 0 ]; then
